fix overflow issue on modal

--- a/patterns/composite/modal/modal.scss
+++ b/patterns/composite/modal/modal.scss
@@ -98,6 +98,9 @@
       .wrapper{
         max-height: calc(100vh - 120px);
         overflow-y: auto;
+        .inner{
+          overflow: hidden;
+        }
       }
     }
     &__close{
